syntax = "proto3";

package com.demo.grpc.proto;

option java_multiple_files = true;

enum BookingType {
  UNKNOWN_TYPE = 0;
  UPDATE = 1;
  VIEW_BY_ID = 2;
  CANCEL = 3;
  ADD = 4;
}